# DEEPSecurity_v2.0

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _CLEANUP.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
deepsecurity/: __init__.py  agent_auth.py  alerts.py  audit.py  cli.py  compliance.py  config.py  db.py  dlp.py  integrity.py  ip_reputation.py  lifecycle.py  logging_config.py  metrics.py  mitre.py  ml.py  models.py  outlook.py  paths.py  processes.py  ransomware_guard.py  rate_limit.py  scan_state.py  scanner.py  secret_masking.py  security_headers.py  threat_intel.py  watchdog_monitor.py  yara_engine.py
deepsecurity/agent/: __init__.py  cli.py  config.py  transport.py  worker.py
deepsecurity/api/: __init__.py  agents.py  audit.py  auth.py  compliance.py  dlp.py  errors.py  health.py  intel.py  metrics.py  network.py  processes.py  quarantine.py  scanner.py  sinks.py  system.py  watchdog.py
deepsecurity/compliance_templates/: __init__.py  hipaa_164_308_a_1.py  hipaa_164_312_a_1.py  iso27001_a_12_4.py  iso27001_a_8_1.py  iso27001_a_8_9.py  soc2_cc6_1.py  soc2_cc6_6.py  soc2_cc7_1.py
deploy/: Dockerfile  docker-compose.yml
deploy/saas/: Caddyfile  docker-compose.yml
docs/: ARCHITECTURE.md  COMPLIANCE.md  COVERAGE_MODEL.md  OPERATIONS.md  POSTGRES.md  REFACTOR_NOTES.md  RENDER_DEPLOY.md  SAAS_DEPLOY.md  SECURITY.md  TEST_OPERATIONS.md  THREAT_MODEL.md  WEDGE.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AuditPanel.jsx  DLPPanel.jsx  Dashboard.jsx  Login.jsx  NetworkPanel.jsx  ProcessPanel.jsx  QuarantinePanel.jsx  RealtimePanel.jsx  ScanDashboard.jsx  ScanPanel.jsx  SinksPanel.jsx  SystemPanel.jsx
frontend/src/styles/: darkTheme.css
samples/: smoke_test.txt
scripts/: continuous_tests.bat  continuous_tests.py  continuous_tests.sh  e2e_full.py  smoke.bat  smoke.py  verify_realtime.bat
tests/: conftest.py  test_alerts.py  test_api_auth.py  test_api_scanner.py  test_api_security.py  test_compliance.py  test_compliance_templates.py  test_config.py  test_dlp.py  test_dlp_patterns_v2.py  test_entropy.py  test_fleet_policy.py  test_intel.py  test_metrics.py  test_ml.py  test_operations_e2e.py  test_outlook_policy.py  test_paths.py  test_rate_limit.py  test_scanner.py  test_secret_masking.py  test_watchdog.py
